# kaspa-indexer-lite

./: Cargo.toml  README.md  schema.sql  views.sql
examples/: probe_get_blocks.rs
migrations/: 001_chain_blocks_tx_count.sql
src/: db.rs  main.rs  models.rs  processor.rs  pruner.rs
